# mkpoker-lookup-tables

./: CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
source/: mkp_lookup_table_35.cpp  mkp_lookup_table_straight.cpp
